arreglados algunos problemas detectados por Sonar Lint